Fixed positioning issues on mobile

--- a/style.css
+++ b/style.css
@@ -373,4 +373,16 @@ main {
         padding: 0;
         justify-content: center;
     }
+
+    .project-previews {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        gap: 50px;
+    }
+
+    .image {
+        width: 380px;
+        height: 220px;
+      }
 }
